--- a/client/src/app/components/navigation/navigation-base/navigation-base.component.html
+++ b/client/src/app/components/navigation/navigation-base/navigation-base.component.html
@@ -19,7 +19,7 @@
 <md-sidenav-container fullscreen>
 	<md-sidenav #sidenav mode="side" opened="true" class="sidenav-contents">
 		<div>
-			<div class="sidenav-section" *ngFor="let section of sections">
+			<!--<div class="sidenav-section" *ngFor="let section of sections">
 				<div class="sidenav-section-header">
 					{{section.name}}
 				</div>
@@ -34,7 +34,26 @@
 						<div class="flex-item" fxFlex>{{link.label}}</div>
 					</div>
 				</div>
+			</div>-->
+
+
+
+			<!-- TEMPORARY -->
+			<div *ngFor="let link of tempLinks">
+				<div *ngIf="link.visible" 
+					[routerLink]="link.route.path" 
+				routerLinkActive="sidenav-link-active" 
+					class="sidenav-link flex-container"
+					fxLayout="row"
+					fxLayoutAlign=" center"
+					style="border-bottom: solid 0px lightgray;">
+					<md-icon class="sidenav-link-icon flex-item" fxFlex="64px">{{link.icon}}</md-icon>
+					<div class="flex-item" fxFlex>{{link.label}}</div>
+				</div>
 			</div>
+
+
+
 		</div>
 	</md-sidenav>
 	<router-outlet></router-outlet>
