--- a/client/src/app/components/report/report-selector/report-selector.component.html
+++ b/client/src/app/components/report/report-selector/report-selector.component.html
@@ -1,1 +1,11 @@
-REPORTS!!!!
+<md-card class="section-single">
+	<md-card-content>
+		<div class="section-title">Reports</div>
+		<div style="padding: 16px">
+			<button md-raised-button routerLink="../instantaneous-report" style="width:150px">INSTANTANEOUS</button>
+		</div>
+		<div style="padding: 16px">
+			<button md-raised-button routerLink="../ime-report" style="width:150px">EXCEEDENCE</button>
+		</div>
+	</md-card-content>
+</md-card>
