--- a/client/src/app/components/unverified-data/assign-ime-number-dialog/assign-ime-number-dialog.component.html
+++ b/client/src/app/components/unverified-data/assign-ime-number-dialog/assign-ime-number-dialog.component.html
@@ -23,7 +23,7 @@
 							<div class="flex-item" fxFlex>Grid Count: {{number.unverifiedInstantaneousData.length + number.instantaneousData.length}}</div>
 							<div class="flex-container" fxLayout="row">
 								<div class="flex-item" fxFlex>Site: {{number.site.constantName}}</div>
-								<div>Discovery Date: {{number.discoveryDate}}</div>
+								<div>Discovery Date: {{number.dateCode}}</div>
 							</div>
 						</div>-->
 					</div>
