--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -97,6 +97,12 @@ a {
     padding: 16px;
 }
 
+.list-table-super-header-row {
+    text-align: center;
+    font-weight: bold;
+    height: 31px;
+}
+
 .list-table-header-row {
     text-align: left;
     font-weight: bold;
