--- a/client/src/app/components/navigation/navigation-base/navigation-base.component.html
+++ b/client/src/app/components/navigation/navigation-base/navigation-base.component.html
@@ -28,7 +28,7 @@
 				<div class="nav-logo-text">
 					<font color="white">Bureau of Sanitation</font>	
 				</div>
-			</div>
+			<!--</div>
 				<div class="sidenav-section-header">
 					{{section.name}}
 				</div>
@@ -42,8 +42,8 @@
 						<md-icon class="sidenav-link-icon flex-item" fxFlex="64px">{{link.icon}}</md-icon>
 						<div class="flex-item" fxFlex>{{link.label}}</div>
 					</div>
-				</div>
-			</div>-->
+				</div>-->
+			</div>
 
 
 
