--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -93,6 +93,11 @@ a {
     padding: 24px 16px 16px 16px;
 }
 
+.md-select-row {
+    padding-top: 13px;
+    padding-bottom: 13px;
+}
+
 .list-table {
     padding: 16px;
 }
