--- a/client/src/app/components/instantaneous/ime-number/ime-number.component.html
+++ b/client/src/app/components/instantaneous/ime-number/ime-number.component.html
@@ -9,10 +9,10 @@
 						<strong>IME Number:</strong> {{imeNumberData.imeNumber}}
 					</div>
 					<div class="flex-item" fxFlex>
-						<strong>Site:</strong>
+						<strong>Site:</strong> Coming Soon
 					</div>
 					<div class="flex-item" fxFlex>
-						<strong>Grids:</strong>
+						<strong>Grids:</strong> Coming Soon
 					</div>
 				</div>
 				<div *ngIf="!imeNumberData">
