--- a/client/src/app/components/test/instantaneous-upload-test/instantaneous-upload-test.component.html
+++ b/client/src/app/components/test/instantaneous-upload-test/instantaneous-upload-test.component.html
@@ -1,5 +1,5 @@
 <div class="component">
-    <h3>Upload Instantaneous Data</h3>
+    <h3>Upload Data From Mobile App</h3>
     <div>
         <app-file-upload #fileUpload (change)="fileUpload.fileSelected()"></app-file-upload>
     </div>
