--- a/client/src/app/components/unverified-data/unverified-data-set/unverified-data-set.component.html
+++ b/client/src/app/components/unverified-data/unverified-data-set/unverified-data-set.component.html
@@ -88,16 +88,22 @@
 						<div class="truncate flex-item" fxFlex>{{inst.monitoringPoint.name}}</div>
 						<div class="truncate flex-item" fxFlex>{{DateTimeUtils.getTime(inst.startTime)}}</div>
 						<div class="truncate flex-item" fxFlex>{{DateTimeUtils.getTime(inst.endTime)}}</div>
-						<div class="truncate flex-item" fxFlex>{{inst.instrument.serialNumber}}</div>
+						<div class="flex-item" fxFlex  style="margin-top:-20px;">
+							<md-select [(ngModel)]="inst.instrument.id" placeholder="Instrument" class="md-select-row">
+								<md-option *ngFor="let instrument of instruments" [value]="instrument.id">
+									{{instrument.serialNumber}}
+								</md-option>
+							</md-select>
+						</div>
 						<div class="truncate flex-item" fxFlex>{{inst.methaneLevel / 100}}</div>
 						<div class="truncate flex-item" fxFlex="150px">
-							{{inst.imeNumber ? inst.imeNumber.imeNumber : ''}}
+							{{inst.imeNumbers && inst.imeNumbers.length > 0 ? (inst.imeNumbers.length > 1 ? 'Multiple' : inst.imeNumbers[0].imeNumber) : ''}}
 							<!--<md-icon *ngIf="inst.methaneLevel >= 50000" (click)="openAssignImeNumberDialog(inst)" mdTooltip="Change" mdTooltipPosition="after" class="list-table-icon-button" color="accent">{{inst.imeNumber ? 'sync' : 'add'}}</md-icon>
 							<md-icon *ngIf="inst.methaneLevel < 50000 && inst.imeNumber" mdTooltip="Remove" mdTooltipPosition="after" class="list-table-icon-button" color="warn">remove</md-icon>-->
 						</div>
 						<div class="flex-item" fxFlex="150px">
-							<button md-raised-button *ngIf="inst.methaneLevel >= 50000" (click)="openAssignImeNumberDialog(inst)" style="margin-top:-18px;">{{inst.imeNumber ? 'CHANGE IME#' : 'ADD IME#'}}</button>
-							<button md-raised-button *ngIf="inst.methaneLevel < 50000 && inst.imeNumber" (click)="removeImeNumber(inst)" style="margin-top:-18px;">REMOVE IME#</button>
+							<button md-raised-button *ngIf="inst.methaneLevel >= 50000" (click)="openAssignImeNumberDialog(inst)" style="margin-top:-18px;">{{inst.imeNumbers && inst.imeNumbers.length > 0 ? 'CHANGE IME#' : 'ADD IME#'}}</button>
+							<button md-raised-button *ngIf="inst.methaneLevel < 50000 && inst.imeNumber" (click)="removeImeNumbers(inst)" style="margin-top:-18px;">REMOVE IME#</button>
 						</div>
 					</div>
 				</div>
