--- a/client/src/app/components/unverified-data/unverified-data-set/unverified-data-set.component.html
+++ b/client/src/app/components/unverified-data/unverified-data-set/unverified-data-set.component.html
@@ -18,7 +18,7 @@
 						<strong>File Name:</strong> {{dataSet.filename}}
 					</div>
 					<md-input-container class="flex-item" fxFlex style="margin-top:-20px;">
-						<input mdInput type="number" min="29.5" max="30.5" placeholder="Barometric Pressure" [(ngModel)]="dataSet.barometricPressure" (ngModelChange)="unverifiedDataService.checkForErrors(dataSet)">
+						<input mdInput type="number" min="29.5" max="30.5" placeholder="Barometric Pressure" [(ngModel)]="barometricPressure" (ngModelChange)="updateBarometricPressure()">
 					</md-input-container>
 				</div>
 			</md-card-content>
@@ -89,7 +89,7 @@
 						<div class="truncate flex-item" fxFlex>{{DateTimeUtils.getTime(inst.startTime)}}</div>
 						<div class="truncate flex-item" fxFlex>{{DateTimeUtils.getTime(inst.endTime)}}</div>
 						<div class="flex-item" fxFlex  style="margin-top:-20px;">
-							<md-select [(ngModel)]="inst.instrument.id" placeholder="Instrument" class="md-select-row">
+							<md-select [(ngModel)]="inst.instrument.id" (ngModelChange)="unverifiedDataService.checkForErrors(dataSet)" placeholder="Instrument" class="md-select-row">
 								<md-option *ngFor="let instrument of instruments" [value]="instrument.id">
 									{{instrument.serialNumber}}
 								</md-option>
@@ -112,6 +112,9 @@
 	</div>
 <div>
 <div class="fab-action-button-container">
+	<button md-fab (click)="consoleLog()" mdTooltip="Console Log" mdTooltipPosition="above" class="fab-action-button">
+		<md-icon>assignment</md-icon>
+	</button>
 	<button md-fab (click)="commit()" mdTooltip="Commit" mdTooltipPosition="above" class="fab-action-button">
 		<md-icon>done</md-icon>
 	</button>
