renamed "user role" to "user permission"

--- a/client/src/app/components/user-group/user-group/user-group.component.html
+++ b/client/src/app/components/user-group/user-group/user-group.component.html
@@ -20,8 +20,8 @@
 		</md-card>
 		<md-card class="section-multiple flex-item" fxFlex>
 			<md-card-content>
-				<div class="section-title">User Roles</div>
-				<app-user-role-selector [selectedRoles]="selectedRoles"></app-user-role-selector>
+				<div class="section-title">User Permissions</div>
+				<app-user-permission-selector [selectedPermissions]="selectedPermissions"></app-user-permission-selector>
 			</md-card-content>
 		</md-card>
 	</div>
