--- a/client/src/app/components/user-group/user-permission-selector/user-permission-selector.component.scss
+++ b/client/src/app/components/user-group/user-permission-selector/user-permission-selector.component.scss
@@ -1,6 +1,6 @@
-$role-add-remove-button-width: 50px;
+$permission-add-remove-button-width: 50px;
 
-.roles-selection-box {
+.permissions-selection-box {
 	width: calc(100% - 16px);
 	height: 320px;
 	overflow-y: auto;
@@ -9,39 +9,39 @@ $role-add-remove-button-width: 50px;
 	border-bottom: solid 1px rgba(0,0,0,0.12);
 }
 
-.role-container {
+.permission-container {
 	width: 100%;
 	border-bottom: solid 1px rgba(0,0,0,0.12);
 	background: #FFF;
 	transition: background 0.2s linear;
 }
 
-.role-container:hover {
+.permission-container:hover {
 	background: #F7F7F7;
 }
 
-.role-add-button {
-	max-width: $role-add-remove-button-width;
+.permission-add-button {
+	max-width: $permission-add-remove-button-width;
 	md-icon {
 		font-size: 2em;
 		cursor: pointer;
 	}
 }
 
-.role-info {
-	width: calc(100% - #{$role-add-remove-button-width});
+.permission-info {
+	width: calc(100% - #{$permission-add-remove-button-width});
 	height: 56px;
 }
 
-.role-title {
+.permission-title {
 	padding: 3px 0 1px 0;
 }
 
-.role-description {
+.permission-description {
 	color: rgba(0,0,0,0.69);
 	font-size: 0.91em;
 	//font-weight: 300;
 	height: 30px;
 	overflow-y: auto;
-	//width: calc(100% - #{$role-add-remove-button-width});
+	//width: calc(100% - #{$permission-add-remove-button-width});
 }
