--- a/client/src/app/components/report/ime-report/ime-report.component.html
+++ b/client/src/app/components/report/ime-report/ime-report.component.html
@@ -1,5 +1,5 @@
 <div class="section-multiple-container">
-	<div class="section-title">Exceedence Report</div>
+	<div class="section-title">Exceedance Report</div>
 	<div class="flex-container" fxLayout="column">
 		<md-card class="section-multiple flex-item" fxFlex>
 			<md-card-content>
