--- a/client/src/app/components/report/report-selector/report-selector.component.html
+++ b/client/src/app/components/report/report-selector/report-selector.component.html
@@ -5,7 +5,7 @@
 			<button md-raised-button routerLink="../instantaneous-report" style="width:150px">INSTANTANEOUS</button>
 		</div>
 		<div style="padding: 16px">
-			<button md-raised-button routerLink="../exceedence-report" style="width:150px">EXCEEDENCE</button>
+			<button md-raised-button routerLink="../exceedance-report" style="width:150px">EXCEEDANCE</button>
 		</div>
 	</md-card-content>
 </md-card>
