--- a/client/src/app/components/public/login/login.component.html
+++ b/client/src/app/components/public/login/login.component.html
@@ -3,10 +3,10 @@
 	<div class="card-container flex-container" fxLayout="row" fxLayoutAlign="center center">
 		<md-card fxFlex="500px" class="login-card">
 			<md-card-content>
-				<div class="logo-container">
+				<div class="logo-container unselectable">
 					<img [src]="logoUrl">
 				</div>
-				<div class="subtitle">LANDFILL e-FORMS</div>
+				<div class="subtitle unselectable">LANDFILL e-FORMS</div>
 				<div>
 					<md-input-container style="width:100%">
 						<input [(ngModel)]="credentials.username" mdInput placeholder="Username" autofocus>
@@ -20,7 +20,7 @@
 				<button md-raised-button color="warn" class="login-button" (click)="login()">LOGIN</button>
 			</md-card-content>
 			<md-card-footer>
-				<div class="app-info">Version: 0.0.8-SNAPSHOT</div>
+				<div class="app-info unselectable">Version: 0.0.8-SNAPSHOT</div>
 			</md-card-footer>
 		</md-card>
 	</div>
